# uwarg-zeropilot-3.5-poc

./: .gitignore  .project
nucleof401re/: .cproject  nucleof401re.ioc
nucleol552ze/: .cproject  .project  nucleol552ze.ioc
nucleol552ze/Core/Src/: main.cpp
nucleol552ze/boardfiles/: override.cpp
nucleol552ze/boardfiles/drivers/led/: led.cpp  led.hpp
nucleol552ze/boardfiles/model/inc/: drivers.hpp  managers.hpp  model.hpp
nucleol552ze/boardfiles/model/src/: drivers.cpp  managers.cpp  model.cpp
nucleol552ze/boardfiles/rtos/threads/inc/: manager1_threads.hpp  manager2_threads.hpp  unified_threads.hpp
nucleol552ze/boardfiles/rtos/threads/src/: manager1_threads.cpp  manager2_threads.cpp  unified_threads.cpp
zeropilot3.5/: CMakeLists.txt  build.bash  common.cmake  hwbuild.bash
zeropilot3.5/include/driver_ifaces/: led_iface.hpp  printer_iface.hpp
zeropilot3.5/include/manager1/: manager1.hpp
zeropilot3.5/include/manager2/: fibonacci.hpp  manager2.hpp
zeropilot3.5/src/manager1/: manager1.cpp  manager1_defines.hpp
zeropilot3.5/src/manager2/: fibonacci.cpp  manager2.cpp
zeropilot3.5/tests/: CMakeLists.txt  testbuild.bash  testbuild.bat
zeropilot3.5/tests/driver_mocks/: led_mock.hpp  printer_mock.hpp
zeropilot3.5/tests/manager1/: 11001_blink_order.cpp
zeropilot3.5/tests/manager2/: 21001_fib_counter.cpp
